--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {
-    "react-native-cli": "^2.0.1"
+  "devDependencies": {
+    "@types/react": "^18.2.12",
+    "@types/react-native": "^0.72.2",
+    "typescript": "^5.1.3"
   }
 }
