feat: implement rn-ml-kit/text-recognition

--- a/text_recognition/package.json
+++ b/text_recognition/package.json
@@ -10,11 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/google-signin": "^5.0.0",
+    "@react-native-firebase/ml-vision": "^7.4.13",
     "@react-native-ml-kit/text-recognition": "^1.2.1",
     "react": "18.2.0",
     "react-native": "0.71.10",
-    "react-native-camera": "^4.2.1"
+    "react-native-image-picker": "^5.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
