--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "@types/react": "^18.2.12",
     "@types/react-native": "^0.72.2",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "install": "^0.13.0",
+    "npm": "^9.7.1",
+    "react-native-image-picker": "^5.4.2"
   }
 }
