--- a/text_recognition/package.json
+++ b/text_recognition/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/ml": "^18.0.0",
     "@react-native-firebase/ml-vision": "^7.4.13",
     "@react-native-ml-kit/text-recognition": "^1.2.1",
     "react": "18.2.0",
